--- a/contrib/scheme/index.html
+++ b/contrib/scheme/index.html
@@ -3,14 +3,12 @@
     <script src="../../js/codemirror.js" type="text/javascript"></script>
     <script src="../../js/mirrorframe.js" type="text/javascript"></script>
     <title>CodeMirror: JavaScript demonstration</title>
-    <link rel="stylesheet" type="text/css" href="css/docs.css"/>
+    <link rel="stylesheet" type="text/css" href="../../css/docs.css"/>
   </head>
   <body style="padding: 20px;">
 
 <p>This page demonstrates <a href="index.html">CodeMirror</a>'s
-JavaScript parser. Note that the ugly buttons at the top are not are
-not part of CodeMirror proper -- they demonstrate the way it can be
-embedded in a web-application.</p>
+Scheme parser.</p>
 
 <div class="border">
 <textarea id="code" cols="120" rows="30">
@@ -19,34 +17,34 @@ embedded in a web-application.</p>
 
 // Press enter inside the object and your new line will be suitably
 // indented.
-var keyBindings = {
-  enter: "newline-and-indent",
-  tab: "reindent-selection",
-  ctrl_z: "undo",
-  ctrl_y: "redo",
-  ctrl_backspace: "undo-for-safari (which blocks ctrl-z)",
-  ctrl_bracket: "highlight-brackets",
-  ctrl_shift_bracket: "jump-to-matching-bracket"
-};
+(define (factorial x)
+  (cond
+    [(= x 0)
+     1]
+    [else
+     (* x (factorial (sub1 x)))]))
 
-// Press tab on the next line and the wrong indentation will be fixed.
-      var regex = /foo|bar/i;
+(list "This is a string"
+      'boolean
+      true
+      3.14)
 
-function example(x) {
-  // Local variables get a different colour than global ones.
-  var y = 44.4;
-  return x + y - z;
-}
+(local [(define x 42)]
+  (printf "ok~n"))
 </textarea>
 </div>
 
 <script type="text/javascript">
   var textarea = document.getElementById('code');
-  var editor = new MirrorFrame(CodeMirror.replace(textarea), {
-    height: "350px",
+  var editor = new CodeMirror(CodeMirror.replace(textarea), {
+     height: "350px",
     content: textarea.value,
-    parserfile: ["js/tokenizescheme.js", "js/parsescheme.js"],
-    stylesheet: "css/schemecolors.css",
+    path: "../../js/",
+<!--     parserfile: ["tokenizejavascript.js", "parsejavascript.js"], -->
+    parserfile: ["../contrib/scheme/js/tokenizescheme.js",
+                 "../contrib/scheme/js/parsescheme.js"],
+    stylesheet:  "../contrib/scheme/css/schemecolors.css",
+
     autoMatchParens: true
   });
 </script>
