getting the stylesheet path corrected.

--- a/contrib/scheme/index.html
+++ b/contrib/scheme/index.html
@@ -35,10 +35,9 @@ Scheme parser.</p>
      height: "350px",
     content: textarea.value,
     path: "../../js/",
-<!--     parserfile: ["tokenizejavascript.js", "parsejavascript.js"], -->
     parserfile: ["../contrib/scheme/js/tokenizescheme.js",
                  "../contrib/scheme/js/parsescheme.js"],
-    stylesheet:  "../contrib/scheme/css/schemecolors.css",
+    stylesheet:  "css/schemecolors.css",
 
     autoMatchParens: true
   });
