--- a/contrib/scheme/index.html
+++ b/contrib/scheme/index.html
@@ -39,7 +39,12 @@ Scheme parser.</p>
                  "../contrib/scheme/js/parsescheme.js"],
     stylesheet:  "css/schemecolors.css",
 
-    autoMatchParens: true
+    autoMatchParens: true,
+    initCallback: function(theEditor) {
+	// Note: the editor initializes in an asynchronously manner
+	// due to its internal iframe!  So if you need to do something
+	// after it is fully initialized, do it in the initCallback.
+    }
   });
 </script>
 
