Adding a disableSpellcheck to the options, though I don't see its effectiveness.

--- a/contrib/scheme/index.html
+++ b/contrib/scheme/index.html
@@ -38,8 +38,8 @@ Scheme parser.</p>
     parserfile: ["../contrib/scheme/js/tokenizescheme.js",
                  "../contrib/scheme/js/parsescheme.js"],
     stylesheet:  "css/schemecolors.css",
-
     autoMatchParens: true,
+    disableSpellcheck: true,
     initCallback: function(theEditor) {
 	// Note: the editor initializes in an asynchronously manner
 	// due to its internal iframe!  So if you need to do something
