--- a/contrib/scheme/index.html
+++ b/contrib/scheme/index.html
@@ -4,6 +4,19 @@
     <script src="../../js/mirrorframe.js" type="text/javascript"></script>
     <title>CodeMirror: JavaScript demonstration</title>
     <link rel="stylesheet" type="text/css" href="../../css/docs.css"/>
+
+    <style type="text/css">
+      .CodeMirror-line-numbers {
+        width: 2.2em;
+        color: #aaa;
+        background-color: #eee;
+        text-align: right;
+        padding-right: .3em;
+        font-size: 10pt;
+        font-family: monospace;
+        padding-top: .4em;
+      }
+    </style>
   </head>
   <body style="padding: 20px;">
 
@@ -32,7 +45,7 @@ Scheme parser.</p>
 <script type="text/javascript">
   var textarea = document.getElementById('code');
   var editor = new CodeMirror(CodeMirror.replace(textarea), {
-     height: "350px",
+    height: "350px",
     content: textarea.value,
     path: "../../js/",
     parserfile: ["../contrib/scheme/js/tokenizescheme.js",
@@ -40,6 +53,7 @@ Scheme parser.</p>
     stylesheet:  "css/schemecolors.css",
     autoMatchParens: true,
     disableSpellcheck: true,
+    lineNumbers: true,
     initCallback: function(theEditor) {
 	// Note: the editor initializes in an asynchronously manner
 	// due to its internal iframe!  So if you need to do something
