--- a/contrib/scheme/js/test/index.html
+++ b/contrib/scheme/js/test/index.html
@@ -5,6 +5,8 @@
 <title>JSSpec results</title>
 <link rel="stylesheet" type="text/css" href="JSSpec.css" />
 <script type="text/javascript" src="../plt-tokenizer.js"></script>
+<script type="text/javascript" src="../../../../js/util.js"></script>
+<script type="text/javascript" src="../../../../js/stringstream.js"></script>
 <script type="text/javascript" src="diff_match_patch.js"></script>
 <script type="text/javascript" src="JSSpec.js"></script>
 <script type="text/javascript" src="tests.js"><script></script>
